# ref_book_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __main__.py  docker-compose.yaml  env.example  pyproject.toml
infra/helpers/: load_test_data.py
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 2025_02_09_2250-fed0cd37a340_create_tables.py  2025_02_09_2254-275520a01bcf_create_phone_table.py  2025_02_09_2309-7b5d400b904a_alter_activity_table.py  2025_02_09_2313-1fb1f306b51a_alter_activity_table_2.py  2025_02_10_0059-5b9616d3e3be_alter_building_table.py
src/api/: __init__.py  router.py
src/api/docs/: __init__.py
src/api/monitoring/: __init__.py
src/api/v1/: __init__.py  ref_book_router.py  router.py
src/app/common/loggers/: __init__.py  console_logger.py  debug_logger.py  file_logger.py
src/app/common/services/: __init__.py  ref_book_source_service.py
src/app/core/application/: __init__.py  application.py
src/app/repositories/db/models/: __init__.py  activity.py  base.py  building.py  db_helper.py  organization.py  phone_number.py
src/app/schemas/: ref_book_schemas.py
src/configs/: __init__.py  base.py
