[tool.poetry]
name = "rest-api-ref-book"
version = "0.1.0"
description = ""
authors = ["Denis Sarjevsky <denis.sarjevsky@aiso.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = { extras = ["email"], version = "^2.7.1" }
pydantic-settings = "^2.2.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
geoalchemy2 = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
